k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: superhero-api
  labels:
    name: superhero-api
