k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: superhero-api
  labels:
    app: superhero-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: superhero-api
  template:
    metadata:
      labels:
        app: superhero-api
    spec:
      containers:
      - name: superhero-api
        image: superhero-api:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: file-upload-volume
          mountPath: /var/www/ncatbird.ru/html
      volumes:
      - name: file-upload-volume
        persistentVolumeClaim:
          claimName: file-upload-pvc
