k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: superhero-api
spec:
  selector:
    app: superhero-api
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30080
  type: NodePort
